<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="25dp"
        android:text="@string/info"
        android:textSize="18sp" tools:targetApi="o"/>
    <TextView
        android:id="@+id/inputHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info"
        android:layout_alignParentLeft="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"/>
    <TextView
        android:id="@+id/avalableTry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info"
        android:layout_alignParentRight="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/tryRemain"
        android:textSize="18sp" />

    <!-- A CardView that contains a TextView -->
    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="150dp"
        android:layout_marginBottom="-65dp"
        android:layout_marginTop="50dp"
        android:onClick="submit"
        android:paddingBottom="15dp"
        card_view:cardBackgroundColor="@color/colorAccent"
        card_view:cardCornerRadius="15dp"
        card_view:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="15dp">
            <TextView
                android:id="@+id/box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/box"
                android:textSize="30sp"
                android:textColor="#fff"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/card_view_submit"
    android:orientation="horizontal"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="80dp">

    <EditText
        android:id="@+id/userInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/entryHint"
        android:textSize="26sp"
        android:layout_centerVertical="true"
        android:digits="@string/values"
        android:inputType="number"
        android:layout_marginHorizontal="25dp"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="submit"
        android:layout_centerHorizontal="true"
        />
</LinearLayout>



</RelativeLayout>